add_subdirectory(parsers)
add_subdirectory(egraph)
add_subdirectory(api)
add_subdirectory(cnfizers)
add_subdirectory(common)
add_subdirectory(minisat)
add_subdirectory(parsers/smt2)
add_subdirectory(simplifiers)
add_subdirectory(smtsolvers)
add_subdirectory(sorts)
add_subdirectory(tsolvers)
add_subdirectory(tsolvers/emptysolver)
